# AdventOfCode2019

./: .gitignore  README.md
cc/day2-1/: main.cc
cc/day2-a/: Makefile
cc/day5-a/: Makefile  main.cc
cc/day5-b/: main.cc
day1/: Main.hs
day1-1/: Makefile
day1-2/: Main.hs
day2-1/cc/: main.cc
day2-1/hs/: Main.hs
day2-2/cc/: main.cc
hs/day1-a/: README.md  day1-a.cabal
hs/day1-b/: README.md  day1-b.cabal
hs/day2-a/: LICENSE  day2-a.cabal  newline_input.txt
hs/day2-a/src/: Main.hs
hs/day2-b/: README.md  day2-b.cabal
hs/day2-b/src/: Main.hs
hs/day3-a/: README.md  day3-a.cabal
hs/day3-a/src/: Main.hs
hs/day3-b/: day3-b.cabal
hs/day3-b/src/: Main.hs
hs/day4-a/: README.md  day4-a.cabal
hs/day4-a/src/: Main.hs
hs/day4-b/: day4-b.cabal
hs/day4-b/src/: Main.hs
hs/day5-a/: LICENSE  README.md  day5-a.cabal
hs/day5-a/src/: Main.hs
