name:                day5-a
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/btrzcinski/day5-a#readme
license:             BSD3
license-file:        LICENSE
author:              Barnett Trzcinski
maintainer:          btrzcinski@gmail.com
copyright:           2020 Barnett Trzcinski
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day5-a
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
